config_setting(
    name = "windows",
    values = {
        "cpu": "x64_windows",
    },
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "cppast_hdrs",
    hdrs = glob(["include/**/*.hpp"]),
    strip_include_prefix = "include",
    visibility = ["//:__subpackages__"],
)

alias(
    name = "cppast",
    actual = "//src:cppast",
    visibility = ["//visibility:public"],
)
